<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nuevomensaje"
        android:title="@string/nuevomensaje"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/recibidos"
        android:title="@string/recibidos"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/enviados"
        android:title="@string/enviados"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/admin"
        android:title="@string/Administrar"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>